@@ -23,25 +23,6 @@ name|common
 operator|.
 name|params
 operator|.
-name|CollectionParams
-operator|.
-name|CollectionAction
-operator|.
-name|*
-import|;
-end_import
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|params
-operator|.
 name|CommonParams
 operator|.
 name|*
@@ -248,23 +229,6 @@ operator|.
 name|cloud
 operator|.
 name|ZkStateReader
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|params
-operator|.
-name|CollectionParams
-operator|.
-name|CollectionAction
 import|;
 end_import
 begin_import
@@ -510,15 +474,6 @@ name|CONFNAME
 init|=
 literal|"confname"
 decl_stmt|;
-DECL|field|REVERSE
-specifier|private
-specifier|static
-specifier|final
-name|String
-name|REVERSE
-init|=
-literal|"reverse"
-decl_stmt|;
 DECL|field|ZKHOST
 specifier|private
 specifier|static
@@ -554,15 +509,6 @@ name|String
 name|BOOTSTRAP
 init|=
 literal|"bootstrap"
-decl_stmt|;
-DECL|field|SOLR_XML
-specifier|private
-specifier|static
-specifier|final
-name|String
-name|SOLR_XML
-init|=
-literal|"solr.xml"
 decl_stmt|;
 DECL|field|UPCONFIG
 specifier|private
@@ -608,6 +554,15 @@ name|String
 name|CMD
 init|=
 literal|"cmd"
+decl_stmt|;
+DECL|field|CLUSTERPROP
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CLUSTERPROP
+init|=
+literal|"clusterprop"
 decl_stmt|;
 comment|/**    * Allows you to perform a variety of zookeeper related tasks, such as:    *     * Bootstrap the current configs for all collections in solr.xml.    *     * Upload a named config set from a given directory.    *     * Link a named config set explicity to a collection.    *     * Clear ZooKeeper info.    *     * If you also pass a solrPort, it will be used to start an embedded zk useful    * for single machine, multi node tests.    */
 DECL|method|main
@@ -1305,7 +1260,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|BOOTSTRAP
 argument_list|)
@@ -1408,7 +1363,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|UPCONFIG
 argument_list|)
@@ -1544,7 +1499,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|DOWNCONFIG
 argument_list|)
@@ -1650,7 +1605,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|LINKCONFIG
 argument_list|)
@@ -1744,7 +1699,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|LIST
 argument_list|)
@@ -1766,7 +1721,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|CLEAR
 argument_list|)
@@ -1837,7 +1792,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|MAKEPATH
 argument_list|)
@@ -1910,7 +1865,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|PUT
 argument_list|)
@@ -2051,7 +2006,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|PUT_FILE
 argument_list|)
@@ -2202,7 +2157,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|GET
 argument_list|)
@@ -2300,7 +2255,7 @@ argument_list|(
 name|CMD
 argument_list|)
 operator|.
-name|equals
+name|equalsIgnoreCase
 argument_list|(
 name|GET_FILE
 argument_list|)
@@ -2395,19 +2350,17 @@ block|}
 elseif|else
 if|if
 condition|(
-name|CollectionAction
-operator|.
-name|get
-argument_list|(
 name|line
 operator|.
 name|getOptionValue
 argument_list|(
 name|CMD
 argument_list|)
-argument_list|)
-operator|==
+operator|.
+name|equalsIgnoreCase
+argument_list|(
 name|CLUSTERPROP
+argument_list|)
 condition|)
 block|{
 if|if
@@ -2598,6 +2551,35 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+else|else
+block|{
+comment|// If not cmd matches
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"Unknown command "
+operator|+
+name|line
+operator|.
+name|getOptionValue
+argument_list|(
+name|CMD
+argument_list|)
+operator|+
+literal|". Use -h to get help."
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 finally|finally
